fix dark mode colors

--- a/assets/sass/0-settings/_color-scheme.scss
+++ b/assets/sass/0-settings/_color-scheme.scss
@@ -40,7 +40,7 @@
   @import '../0-settings/gist-color-scheme-dark';
 
   --brand-color: #0073ec;
-  --white: #4d4d4d;
+  --white: #fdfdfa;
   --light-gray: #f0f0f0;
   --gray: #9e9e9e;
   --dark: #111016;
